# routes/transactions.js
@@ -5,6 +5,10 @@ const bankModel = require('../models/Bank')
 const { verifyToken, refreshBanksFromCentralBank } = require('../middleware')
 const fetch = require('node-fetch')
 const transactionsModel = require('../models/Transaction')
+const jose = require('node-jose')
+const axios = require('axios')
+const fs = require('fs')
+
 
 
 require('dotenv').config()
@@ -85,35 +89,169 @@ router.post('/', verifyToken, async (req, res, next) => {
     return res.status(201).json()
 
 })
-router.post('/b2b', verifyToken, async (req, res, next) => {
+router.post('/b2b', async (req, res, next) => {
+
+    console.log('/b2b: Started processing incoming transaction request')
+
+    let transaction
 
     // Get jwt from body
+    jwt = req.body.jwt
 
-    const jwt = req.header('Api-Key');
-    if (!ApiKey) return res.status(400).json({error: 'Missing Api-Key header'});
+    // Extract transaction from jwt (payload)
+    try {
+        // Get the middle part of JWT
+        const base64EncodedPayload = jwt.split('.')[1];
 
+        // Decoded it and parse it to a transaction abject
+        transaction = JSON.parse(Buffer.from(base64EncodedPayload, 'base64').toString());
+
+        console.log('/b2b: Received this payload: ' + JSON.stringify(transaction))
+    } catch (e) {
+        return res.status(400).json({error: 'Parsing JWT payload failed: ' + e.message})
+    }
+
+    // Extract accountTo
+    const accountTo = await accountModel.findOne({number: transaction.accountTo})
 
     // Verify accounts
+    if (!accountTo) {
+        return res.status(404).json({error: 'Account not found'})
+    }
+    console.log('/b2b: Found this account: ' + JSON.stringify(accountTo))
 
-    // Get bank's prefix
+    // Get bank's prefix from accountFrom
+    const bankFromPrefix = transaction.accountFrom.substring(0,3)
+    console.log('/b2b: Prefix from accountFrom is: ' + bankFromPrefix)
+
+    // Get bank's data by prefix
+    let bankFrom = await bankModel.findOne({bankPrefix: bankFromPrefix})
+
+    // Update our banks collection, if this is a new bank
+    if(!bankFrom) {
+        console.log('/b2b: Didn\'t find bankFrom from local bank list')
+
+        // Refresh banks from central bank
+        console.log('/b2b: Refreshing local bank list')
+        const result = await refreshBanksFromCentralBank();
+
+        // Check if there was an error
+        if (typeof result.error !== 'undefined') {
+
+            // Console the error
+            console.log('/b2b: There was an error communicating with central bank: ' + result.error)
+
+            // Fail with error
+            return res.status(502).json({error: 'Central Bank error: ' + result.error})
+        }
+
+        // Try getting the details of the destination bank again
+        console.log('/b2b: Attempting to get bank from local bank list again')
+        bankFrom = await bankModel.findOne({bankPrefix: bankFromPrefix})
+
+        // Fail with error if the bank is still not found
+        if (!bankFrom) {
+
+            console.log('/b2b: Still didn\'t get the bank. Failing now')
+
+            return res.status(400).json({
+                error: 'The account sending the funds does not belong to a bank registered in Central Bank'
+            })
+        }
+
+    }
+
+    console.log('/b2b: Go bank details: ' + JSON.stringify(bankFrom))
 
     // Get bank's jwksUrl
+    if(!bankFrom.jwksUrl) {
+        console.log('/b2b: bankFrom does not have jwksUrl: ' + JSON.stringify(bankFrom))
+        return res.status(500).json({error: 'Cannot verify your signature: The jwksUrl of your bank is missing'})
+    }
 
     // Get bank's public key
-    const ApiKey = req.header('Api-Key');
-    if (!ApiKey) return res.status(400).json({error: 'Missing Api-Key header'});
+    let keystore
+    try {
 
-    // Verify signature
+        // Get the other bank's public key
+        console.log('/b2b: Attempting to contact jwksUrl of ${bankFrom.name}...')
+        const response = await axios.get(bankFrom.jwksUrl);
 
-    // Convert currency
+        // Import it to jose
+        console.log('/b2b: Importing its public key to our keystore')
+        keystore = await jose.JWK.asKeyStore(response.data)
+    } catch (e) {
+        console.log('/b2b: Importing of the other bank\'s public key from ${bankFrom.jwkUrl} failed: ' + e.message)
+        return res.status(400).json({error: 'Cannot verify your signature: The jwkUrl of your bank ${bankFrom.jwkUrl} is invalid: ' + e.message})
+    }
 
-    // Increase accountTo
+    // Verify that signature matches the payload and it's created with the private key of wich we have the public key
+    console.log('/b2b: Verifying signature')
+    try {
+        await jose.JWS.createVerify(keystore).verify(jwt)
+    } catch (e) {
+        return res.status(400).json({error: 'Invalid signature'})
+    }
+
+    // Write original amount to amount
+    let amount = transaction.amount
+
+    // Convert amount from another currency, if needed
+    if (accountTo.currency !== transaction.currency) {
+        console.log('/b2b: Currency needs conversion')
+
+        // Get the currency rate
+        const rate = await require('exchange-rates-api')
+            .exchangeRates().latest()
+            .base(transaction.currency)
+            .symbols(accountTo.currency)
+            .fetch();
+        console.log('/b2b: Looks like 1 ${transaction.currency} = ${rate} ${accountTo.currency}')
+
+        // Convert strings to numbers, convert currency, round the result to full cents (makes it a string) and convert it back to number
+        amount = parseInt((parseFloat(rate) * parseInt(amount)).toFixed(0))
+    }
+
+    // Get accountTo owner's details
+    const accountToOwner = await userModel.findOne({_id: accountTo.userId})
+
+    // Increase accountTo's balance
+    console.log('/b2b: Increasing ${accountToOwner.name}\' account ${accountTo.number} by ${amount / 100} ${accountTo.currency}')
+    accountTo.balance = accountTo.balance + amount
+
+    // Save the changes to DB
+    accountTo.save()
 
     // Create transaction
+    await transactionModel.create({
+        userId: accountTo.userId,
+        amount: transaction.amount,
+        currency: transaction.currency,
+        accountFrom: transaction.accountFrom,
+        accountTo: transaction.accountTo,
+        explanation: transaction.explanation,
+        senderName: transaction.senderName,
+        receiverName: transaction.receiverName,
+        status: 'completed'
+    })
 
     // Send receiverName
-
+    res.json({receiverName: accountToOwner.name})
 })
 
+router.get('/jwks', async(req, res, next) => {
+
+    // Create new keystore
+    console.log('/jwks: Create keystore')
+    const keystore = jose.JWK.createKeyStore();
+
+    // Add our private key from file to the keystore
+    console.log('/jwks: Reading private key from disk and adding it to keystore')
+    await keystore.add(fs.readFileSync('./keys/private.key').toString(), 'pem')
+
+    // Return our keystore (only the public key derived from the imported private key) in JWKS (JSON Web Key Set) format
+    console.log('/jwks: Exporting keystore and returning it')
+    return res.send(keystore.toJSON())
+})
 
 module.exports = router;
